tests/snapshots/integration_test__tests__should_not_be_able_to_use_expression_in_indexes.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        var array = [0, 1, 2, 3, 4, 5];\n        out(array[1 + 2].fmt());\n        \"#,\n    \"\", |_| {})"
---
stdout: "3\n"
stderr: ""
error: ~
exit_code: 0
