tests/snapshots/integration_test__tests__should_not_run_any_code_after_exit.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nexit 0;\nout(\"This should not be printed!\");\n\"#)"
---
stdout: ""
stderr: ""
error: ~
exit_code: 0
