tests/snapshots/integration_test__tests__should_return_value_from_function.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nfunc my_function() {\n    return \"value\";\n}\nout(my_function());\n\"#)"
---
stdout: "value\n"
stderr: ""
error: ~
