tests/snapshots/integration_test__tests__should_support_returning_from_nested_blocks.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nfunc my_function(): string  {\n    if true {\n        return \"value\";\n    };\n}\n\nout(my_function());\n\"#)"
---
stdout: "value\n"
stderr: ""
error: ~
