tests/snapshots/integration_test__tests__strings_should_be_equal_if_contents_is_the_same.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nvar my_value = \"my_string\" == \"my_string\";\nout(my_value.fmt());\n\"#)"
---
stdout: "true\n"
stderr: ""
error: ~
exit_code: 0
